<resources>
    <string name="app_name">RecipesAndroidApp</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter_results">filter results</string>
    <string name="searchrecipe">Search Recipe</string>
    <string name="retry">retry</string>
    <string name="none">None</string>
    <string name="calories">Calories</string>
    <string name="proteins">Proteins</string>
    <string name="carbos">Carbos</string>
    <string name="fats">Fats</string>
    <string name="nutritional_facts">Nutritional Facts</string>
</resources>