<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipesFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                style="@style/ripple_style"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp"
                app:layout_constraintBottom_toBottomOf="@+id/cardView2"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cardView2">

                <ImageView
                    android:id="@+id/sort_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/filter_results"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_sort" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                app:cardElevation="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/search_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/_8sdp"
                    android:paddingRight="@dimen/_8sdp"
                    android:text="@string/searchrecipe"
                    style="@style/ripple_style"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="@android:color/darker_gray"
                    app:drawableEndCompat="@drawable/ic_search"
                    app:drawableRightCompat="@drawable/ic_search" />
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipes_recycler_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"/>

            <ProgressBar
                android:id="@+id/recipes_progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <androidx.cardview.widget.CardView
                android:id="@+id/error_cardView"
                android:layout_width="0dp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/retry_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:text="@string/retry"
                        app:backgroundTint="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/error_textView"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        tools:text="ERROR"
                        android:textColor="#A50000"
                        app:layout_constraintBottom_toTopOf="@+id/retry_button"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>